--- a/notebooks/1_model_leakage_demo.ipynb
+++ b/notebooks/1_model_leakage_demo.ipynb
@@ -1503,7 +1503,11 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "12b51bbd",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "def evaluar_modelo_con_fuga(X, y, modelo, param_grid, nombre_modelo, random_state=42):\n",
@@ -1567,7 +1571,11 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "ee4c8ceb",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "def evaluar_modelo_sin_fuga(X, y, modelo, param_grid, nombre_modelo, random_state=42):\n",
@@ -1636,7 +1644,11 @@
    "cell_type": "code",
    "execution_count": 33,
    "id": "49edbcc9",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2038,7 +2050,11 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "67e1479d",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
